--- a/NotificationService-HandsOn/View/Base.lproj/Main.storyboard
+++ b/NotificationService-HandsOn/View/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                             <constraint firstAttribute="width" constant="100" id="nVL-7o-7cK"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="timerIcon"/>
+                                        <connections>
+                                            <action selector="onTimerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="StJ-33-XOQ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -48,6 +51,9 @@
                                             <constraint firstAttribute="height" constant="100" id="tVD-Vc-1Lt"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="dateIcon"/>
+                                        <connections>
+                                            <action selector="onDateTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VnZ-F8-2Oh"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qin-dh-zqL">
                                         <rect key="frame" x="140" y="0.0" width="100" height="100"/>
@@ -56,6 +62,9 @@
                                             <constraint firstAttribute="height" constant="100" id="dCk-B0-ydd"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="locationIcon"/>
+                                        <connections>
+                                            <action selector="onLocationTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zEi-lx-ZzZ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
